objects/hed__Test_Score__c.object
<CustomObject>
    <description>The score on a section of a specific test or a composite score.</description>
    <label>Test Score</label>
    <nameField>
        <displayFormat>SCR-{0000}</displayFormat>
        <label>Test Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Test for which this score is being recorded.</description>
        <inlineHelpText>The Test for which this score is being recorded.</inlineHelpText>
        <label>Test</label>
        <referenceTo>hed__Test__c</referenceTo>
        <relationshipLabel>Test Scores</relationshipLabel>
        <relationshipName>Test_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Score__c</fullName>
        <description>The numeric value of the score received.</description>
        <inlineHelpText>The numeric value of the score received.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>The status of the Test Score. For example, In Progress or Completed.</description>
        <inlineHelpText>The status of the Test Score. For example, In Progress or Completed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Test_Type__c</fullName>
        <description>Displays the Test Type name from the associated Test record. For example, SAT or GRE.</description>
        <formula>TEXT(hed__Test__r.hed__Test_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Test Type name from the associated Test record. For example, SAT or GRE.</inlineHelpText>
        <label>Test Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Percentile__c</fullName>
        <description>The percentile ranking for this score.</description>
        <inlineHelpText>The percentile ranking for this score.</inlineHelpText>
        <label>Percentile</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Letter_Score__c</fullName>
        <description>The letter grade achieved on the Test.</description>
        <inlineHelpText>The letter grade achieved on the Test.</inlineHelpText>
        <label>Letter Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Subject_Area__c</fullName>
        <description>The subject matter or category for this test score.</description>
        <inlineHelpText>The subject matter or category for this test score.</inlineHelpText>
        <label>Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Language</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Overall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <externalId>true</externalId>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>